# MyOplibExample

./: .clangd  .gitignore  README.md  pyporject.toml  setup.py
csrc/: CMakeLists.txt
csrc/cmake/compilers/: cuda-compiler-configs.cmake  cxx-compiler-configs.cmake
csrc/cmake/libraries/: libcuda.cmake  libtorch.cmake
csrc/cmake/utils/: lib-install.cmake  run-python.cmake
csrc/include/my_oplib/: my_oplib.hpp
csrc/lib/: CMakeLists.txt
csrc/lib/ops/: ops.hpp  torch_bind.cpp  torch_impl.hpp
csrc/lib/ops/cvtRGBtoGray/: op.cpp  op.cu  torch_impl.cpp
csrc/lib/ops/vector_add/: op.cpp  op.cu  torch_impl.cpp
scripts/: build.sh
src/my_oplib/: __init__.py
test/: test.py
